--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: MuseoModerno, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    padding-right: 1em;
+}
+h2 {
+    margin-bottom: 1em;
+}
+p.subhead {
+    font-size: .8em;
+    padding-top: .8em;
+    margin-top: .8em;
+}
